# deadcode

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: analyzer.rs  config.rs  configuration.rs  dependency_graph.rs  django_heuristics.rs  entity_extractor.rs  error.rs  file_collector.rs  heuristics.rs  lib.rs  main.rs  model.rs  render.rs  report.rs
src/pipeline/: collect.rs  extract.rs  mod.rs  reachability.rs
tests/: command_line_interface.rs  configuration_loading.rs  dead_code_detection.rs  drf_false_positives.rs
tests/fixtures/demo_project/shop/: admin.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py
tests/fixtures/demo_project/shop/management/commands/: sync_products.py
tests/fixtures/demo_project/shop/migrations/: 0001_initial.py
tests/fixtures/drf_project/store/: documents.py  models.py  permissions.py  schemas.py  serializers.py  services.py  urls.py  views.py
