[package]
name = "dc"
version = "0.2.0"
edition = "2021"
rust-version = "1.80"
description = "Высокопроизводительный поиск мертвого кода в Django проектах"
readme = "README.md"

[dependencies]
mimalloc = "0.1.43"
clap = { version = "4.5.20", features = ["derive"] }
tree-sitter = "0.24.3"
tree-sitter-python = "0.23.2"
petgraph = "0.6.5"
rayon = "1.10.0"
ignore = "0.4.23"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
toml = "0.8.19"

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
